--- a/data/index.html
+++ b/data/index.html
@@ -98,7 +98,8 @@
     "attributes": {
         "By Appointment Only": true
     },
-    "type": "business"
+    "type": "business",
+    "img": "doctor.jpeg"
 }</pre><h3>Tip</h3><pre>{
     "user_id": "Vefj29mjork1DLhALLNAsg",
     "text": "Great food, huge portions and a gift shop and showers.",
