--- a/design/index.html
+++ b/design/index.html
@@ -11,7 +11,7 @@
 <h1 id="view-a-tip">View a Tip</h1>
 <p><img src="/yelp-ws/design/view-tips-sketch.JPG" alt="sketch"></p>
 <h1 id="list-users">List Users</h1>
-<p><img src="/yelp-ws/design/list-users-sketch.JPG" alt="sketch"></p>
+<p><img src="/yelp-ws/design/list-users-sketch.jpg" alt="sketch"></p>
 <h1 id="view-a-user">View a User</h1>
 <p><img src="/yelp-ws/design/view-users-sketch.JPG" alt="sketch"></p>
 </div></div></body></html>
